---
source: compiler-core/src/type_/tests/errors.rs
expression: "type Wrapper(innerType) {}"
snapshot_kind: text
---
----- SOURCE CODE
type Wrapper(innerType) {}

----- ERROR
error: Invalid type variable name
  ┌─ /src/one/two.gleam:1:14
  │
1 │ type Wrapper(innerType) {}
  │              ^^^^^^^^^ This is not a valid type variable name

Hint: Type Variable names start with a lowercase letter and contain a-z,
0-9, or _.
Try: inner_type
